syntax = "proto3";

package core.airline.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Airline {
  string id = 1;
  string name = 2;
  string code = 3;
  string logo = 4;
  bool is_active = 5;
  int64 precedence = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}