syntax = "proto3";

package core.airline.v1;

import "google/protobuf/empty.proto";
import "proto/airline/v1/airline.proto";
import "buf/validate/validate.proto";

service AirlineService {
  rpc GetByID(GetByIDRequest) returns (GetByIDResponse) {};
  rpc GetByCode(GetByCodeRequest) returns (GetByCodeResponse) {};
  rpc GetAll(google.protobuf.Empty) returns (GetAllResponse) {};
  rpc Create(CreateRequest) returns (google.protobuf.Empty) {};
  rpc Update(UpdateRequest) returns (google.protobuf.Empty) {};
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {};
}


message GetByIDRequest {
  string id = 1 [(buf.validate.field).required = true, (buf.validate.field).string.uuid = true];
}

message GetByCodeRequest {
  string code = 1 [(buf.validate.field).required = true, (buf.validate.field).string.min_len = 2, (buf.validate.field).string.max_len = 2];
}

message CreateRequest {
  string code = 1 [(buf.validate.field).required = true, (buf.validate.field).string.min_len = 2, (buf.validate.field).string.max_len = 2];
  string name = 2 [(buf.validate.field).required = true, (buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 255];
  string logo = 3 [(buf.validate.field).string.min_len = 5, (buf.validate.field).string.max_len = 255, (buf.validate.field).string.uri = true];
  bool is_active =4 [(buf.validate.field).required = true, (buf.validate.field).bool.const = true];
}

message UpdateRequest {
  string id = 1 [(buf.validate.field).required = true, (buf.validate.field).string.uuid = true];
  string code = 2 [(buf.validate.field).required = true, (buf.validate.field).string.min_len = 2, (buf.validate.field).string.max_len = 2];
  string name = 3 [(buf.validate.field).required = true, (buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 255];
  string logo = 4 [(buf.validate.field).string.min_len = 5, (buf.validate.field).string.max_len = 255, (buf.validate.field).string.uri = true];
  bool is_active = 5 [(buf.validate.field).required = true, (buf.validate.field).bool.const = true];
  int64 precedence = 6 [(buf.validate.field).required = true, (buf.validate.field).int64.gte = 5];
}

message DeleteRequest {
  string id = 1 [(buf.validate.field).required = true, (buf.validate.field).string.uuid = true];
}


message GetByIDResponse {
  Airline airline = 1;
}

message GetByCodeResponse {
  Airline airline = 1;
}

message GetAllResponse {
  repeated Airline airlines = 1;
}